fix(blog.css) : fix bug with horizontal scroll on Ipad. Minor fixes for things-filter

--- a/app/blog/blog.css
+++ b/app/blog/blog.css
@@ -152,7 +152,13 @@
   }
 
   #blog-page.article-page #articles-container {
+    overflow-x: hidden;
     width: 100%;
+  }
+
+  #blog-page #articles-container {
+    overflow-x: hidden;
+
   }
 
   .dynamic-details h1 {
@@ -173,6 +179,7 @@
   }
 
   #blog-page.article-page #articles-container {
+    overflow-x: hidden;
     width: 100%;
     margin: 0 !important;
   }
